# role-dispatch

./: .env  .gitignore  Cargo.toml  README.md  excluded.ron  jobs.ron
.github/workflows/: release.yaml
src/: main.rs  model.rs
src/commands/: exclude.rs  mod.rs  roles.rs  roll.rs  simulate.rs  speedrunning.rs  stages.rs  util.rs
