[package]
name = "role-dispatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
ron = "0.6.4"
serenity = { version = "0.10.8", features = ["framework", "standard_framework", "rustls_backend", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
indexmap = { version = "1.7", features = ["serde-1"] }
rand = "0.8"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
